@@ -1,5 +1,9 @@
 2019-01-23  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c/44715
+	* cp-gimplify.c (genericize_cp_loop): Call begin_bc_block only
+	after genericizing cond and incr expressions.
+
 	PR c++/88984
 	* cp-gimplify.c (genericize_switch_stmt): Move cond genericization
 	before the begin_bc_block call.
