@@ -1,5 +1,8 @@
 2019-01-23  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c/44715
+	* c-c++-common/pr44715.c: New test.
+
 	PR c++/88984
 	* c-c++-common/pr88984.c: New test.
 
