@@ -1,3 +1,9 @@
+2019-01-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/44715
+	* doc/extend.texi: Document break and continue behavior in
+	statement expressions.
+
 2019-01-23  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/89008
